--- a/registar.html
+++ b/registar.html
@@ -17,7 +17,7 @@
 <div class="row">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
 		<div class="login-panel panel panel-default">
-			<div class="panel-heading"> <h2 class="borda1">Bem Vindo</h2></div>
+			<div class="panel-heading"> <h2 class="borda1">Registar</h2></div>
 			<div class="panel-body">
 				<form role="form">
 					<fieldset>
@@ -25,14 +25,13 @@
 							<input class="form-control" placeholder="E-mail" name="email" type="email" autofocus="">
 						</div>
 						<div class="form-group">
-							<input class="form-control" placeholder="Password" name="password" type="password" value="">
+							<input class="form-control" placeholder="Nome" name="nome" type="text" autofocus="">
 						</div>
-						<div class="checkbox">
-							<label>
-								<a href="login.html"> Esqueci minha senha</a>
-							</label>
+						<div class="form-group">
+							<input class="form-control" placeholder="Departamento" name="text" type="password" value="">
 						</div>
-						<a href="index.html" class="btn btn-primary">Entrar</a></fieldset>
+
+						<a href="index.html" class="btn btn-primary">Registar</a></fieldset>
 				</form>
 			</div>
 		</div>
