--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 								<a href="login.html"> Esqueci minha senha</a>
 							</label>
 						</div>
-						<a href="index.html" class="btn btn-primary">Entrar</a></fieldset>
+						<a href="index.html" class="btn btn-primary prim">Entrar</a></fieldset>
 				</form>
 			</div>
 		</div>
