--- a/listarproposta.html
+++ b/listarproposta.html
@@ -78,7 +78,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Proposta</h1>
+            <h1 class="page-header">Proposta <a href="proposta.html" class="btn btn-primary adic">Adicionar</a></h1>
         </div>
     </div><!--/.row-->
 
@@ -91,72 +91,31 @@
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Submeter Proposta
+                    Proposta Submetidas
                     <span class="pull-right"><a href=""><i class="fa fa-reply"></i></a></span></div>
                 <div class="panel-body">
-                    <form action="">
-                        <div class="col-md-7">
-                        <div class="form-group <?php echo (!empty($new_password_err)) ? 'has-error' : ''; ?>">
-                            <label>Titulo</label>
-                            <input type="password" name="new_password" class="form-control" value="">
-                            <span class="help-block"></span>
-                        </div>
-                         <div class="form-group <?php echo (!empty($new_password_err)) ? 'has-error' : ''; ?>">
-                                <label>Departamento</label>
-                                <input type="password" name="new_password" class="form-control" value="">
-                                <span class="help-block"></span>
-                         </div>
-                            <div class="form-group <?php echo (!empty($new_password_err)) ? 'has-error' : ''; ?>">
-                                <label>Requisitos</label>
-                                <input type="password" name="new_password" class="form-control" value="">
-                                <span class="help-block"></span>
-                            </div>
-                            <div class="form-group <?php echo (!empty($new_password_err)) ? 'has-error' : ''; ?>">
-                                <label>Bibliografias</label>
-                                <input type="password" name="new_password" class="form-control" value="">
-                                <span class="help-block"></span>
-                            </div>
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Departamento</th>
+                            <th>Status</th>
+                            <th></th>
 
-                        <div class="form-group">
-                            <label>Alunos</label>
-                            <input type="password" name="confirm_password" class="form-control">
-                            <span class="help-block"></span>
-                        </div>
-                            </div>
-                        <div class="col-md-5">
 
-                            <div class="form-group">
-                                <label>Áreas</label>
-                                <input type="password" name="confirm_password" class="form-control">
-                                <span class="help-block"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Cursos</label>
-                                <input type="password" name="confirm_password" class="form-control">
-                                <span class="help-block"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Quandidade de Alunos</label>
-                                <input type="password" name="confirm_password" class="form-control">
-                                <span class="help-block"></span>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="message">Objectivo</label>
-                                <div class="col-md-13">
-                                    <textarea class="form-control" id="message" name="txtMensagem" placeholder="Escreva sua mensagem aqui..." rows="5"></textarea>
-                                </div>
-                            </div>
+                        </tr>
+                        </thead>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><a href="eliminarencomenda.php?id='.$row['id_encomenda'].'&operacao=eliminar"> <img src="../img/cancel.png" alt=""></a></td>
 
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <textarea class="form-control" id="proposta" name="txtMensagem" placeholder="Escreva sua mensagem aqui..." rows="5"></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" name="bt" class="btn btn-primary" value="Enviar">
-                        </div>
-                    </form>
+                        </tr>
+
+
+
+                    </table>
                 </div>
 
             </div>
