--- a/registar.html
+++ b/registar.html
@@ -31,7 +31,8 @@
 							<input class="form-control" placeholder="Departamento" name="text" type="password" value="">
 						</div>
 
-						<a href="index.html" class="btn btn-primary">Registar</a></fieldset>
+						<a href="index.html" class="btn btn-primary prim">Registar</a>
+					</fieldset>
 				</form>
 			</div>
 		</div>
